log

Thu 14 Mar 2024 08:22:48 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
528277c
Thu 14 Mar 2024 08:23:58 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|7
total_score: 0/70
ef78018
Thu 14 Mar 2024 08:24:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8f02e17
Thu 14 Mar 2024 08:32:04 PM UTC: 
 exercises.c | 23 +++++++++++++++++++----
 1 file changed, 19 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   31 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
f121a85
Thu 14 Mar 2024 08:36:26 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
f57f3a6
Thu 14 Mar 2024 08:40:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:12: error: assignment to expression with array type
   34 |       temp = arr[i];
      |            ^
exercises.c:36:25: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   36 |       arr[size - i - 1] = temp;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
f5c6798
Thu 14 Mar 2024 08:44:12 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
d59860b
